--- a/styly.css
+++ b/styly.css
@@ -42,6 +42,7 @@ h1 {
 }
 
 p {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 28px;
     padding: 40px 30px 40px 30px;
     line-height: 1.5;
@@ -54,6 +55,7 @@ a {
     text-align: center;
     width: 600px;
     padding: 20px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 .pravidla {
