--- a/hra.styly.css
+++ b/hra.styly.css
@@ -7,9 +7,10 @@
 main {
     margin: 0 0 0 0;
 }
+
 body {
     background: linear-gradient(#615dad, #ffc8da);
-    margin: 80px 300px 150px 650px;
+    margin: 80px 300px 150px 700px;
     background-attachment: fixed;
     max-width: 80vmin   
 }
@@ -46,7 +47,7 @@ p.kolo {
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px 0px 15px 0px;  
-    width: 250px;
+    width: 250zpx;
     text-align: left;
     
 }
