--- a/styly.css
+++ b/styly.css
@@ -8,8 +8,6 @@ body {
     background: linear-gradient(#615dad, #ffc8da);
     margin: 100px 0 250px 0;
     background-attachment: fixed;
-    
-
 }
 
 .flex-container {
@@ -27,8 +25,8 @@ img {
 
 h1 {
     font-family: Lobster, cursive;
-    width: 600px;
     font-weight: lighter;
+    width: 600px;
     font-size: 60px;
     padding: 40px;
     padding-bottom: 0%;
@@ -43,7 +41,7 @@ h1 {
 }
 
 p {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 24px;
     padding: 40px 30px 40px 30px;
     line-height: 1.5;
@@ -56,7 +54,7 @@ a {
     text-align: center;
     width: 600px;
     padding: 20px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+
 }
 
 .pravidla {
@@ -77,4 +75,115 @@ a {
 
 .hra:hover {
     background-color: #0090e9;
+}
+
+/* second part game*/
+
+
+
+.game {
+    max-width: 80vmin;
+    margin: auto;
+    background-attachment: fixed;
+
+}
+
+.game-main-title {
+    font-family: Lobster, sans-serif;
+    font-size: 60px;
+    color: #ffffff;
+    font-weight: lighter;
+    background: none;
+    text-align: center;
+    width: 100%;
+    padding: 20px 20px 0px 20px;
+
+}
+
+.game-menu {
+  display: flex;
+  justify-content: space-between;
+  max-width: 80vmin;
+  align-items: baseline;
+
+  
+}
+
+.game-player {
+    font-family: LobsterS, sans-serif;
+    text-transform: uppercase;
+    color: #ffffff;
+    font-size: 22px;
+    font-weight:bold;
+    text-align: left;
+    background: none;
+    padding: 20px 0px 20px 0px;
+}
+.game-circle {
+    color: #ffffff;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 32px;
+    font-weight: bold;
+    text-align: left;
+    background: none;
+    padding: 26px 10px 20px 10px;
+    flex-grow: 2;
+}
+.menu-button {
+    display: flex;
+    justify-content: flex-end;
+    background: none;
+    border: none;
+    margin: auto;
+    
+}
+
+.game-menu-home {
+    background-color: #1fcca4;
+    border-radius: 3px;
+    width: 50px;
+    height: 50px;
+    padding: 10px 6px 0px 6px;
+    box-shadow: 2px 2px 3px #5b579e;
+}
+    
+
+.game-menu-home:hover {
+    background-color: #1cbb96;
+}
+
+.game-menu-restart {
+    background-color: #0197f6;
+    border-radius: 3px;
+    width: 50px;
+    height: 50px;
+    padding: 10px 6px 0px 6px;
+    box-shadow: 2px 2px 3px #5b579e;
+}
+
+.game-menu-restart:hover {
+    background-color: #0090e9;
+}
+
+.game-field {
+    flex-wrap: wrap;
+    font-size: 0;
+    border: 0, 9px solid black;
+    box-shadow: 2px 2px 3px #666874;
+}
+
+.game-cell {
+    height: 8vmin;
+    width: 8vmin;
+    border: 1px solid black;
+    background: rgb(216, 184, 216);
+    opacity: 60%;
+}
+
+.game-cell:hover,
+.game-cell:focus {
+    background-color: rgb(247, 241, 247);
+    cursor: pointer;
+    opacity: 70%;
+   
 }
