--- a/styly.css
+++ b/styly.css
@@ -119,7 +119,7 @@ a {
     background: none;
     padding: 20px 0px 20px 0px;
 }
-.game-circle {
+.gamer {
     color: #ffffff;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 32px;
@@ -187,3 +187,21 @@ a {
     opacity: 70%;
    
 }
+
+.board__field--circle {
+    background-image: url(circle.svg); 
+    background-position: 50%;
+    background-repeat: no-repeat;
+   
+   
+    
+
+    
+    }
+    .board__field--cross {
+    background-image: url(cross.svg);
+    background-position: 50%;
+    background-repeat: no-repeat;
+    
+    
+    }
