--- a/styly.css
+++ b/styly.css
@@ -101,41 +101,38 @@ a {
 }
 
 .game-menu {
-  display: flex;
-  justify-content: space-between;
-  max-width: 80vmin;
-  align-items: baseline;
+    display: flex;
+    justify-content: left;
+    max-width: 80vmin;
+    align-items: baseline;
 
-  
+
 }
 
 .game-player {
     font-family: LobsterS, sans-serif;
-    text-transform: uppercase;
     color: #ffffff;
     font-size: 22px;
-    font-weight:bold;
+    font-weight: bold;
     text-align: left;
     background: none;
     padding: 20px 0px 20px 0px;
 }
-.gamer {
-    color: #ffffff;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 32px;
-    font-weight: bold;
-    text-align: left;
-    background: none;
-    padding: 26px 10px 20px 10px;
-    flex-grow: 2;
+
+#gamer {
+    display: flex;
+    align-items: left;
+    margin-right: 400px;
+    
 }
+
 .menu-button {
     display: flex;
     justify-content: flex-end;
     background: none;
     border: none;
     margin: auto;
-    
+
 }
 
 .game-menu-home {
@@ -146,7 +143,7 @@ a {
     padding: 10px 6px 0px 6px;
     box-shadow: 2px 2px 3px #5b579e;
 }
-    
+
 
 .game-menu-home:hover {
     background-color: #1cbb96;
@@ -185,23 +182,44 @@ a {
     background-color: rgb(247, 241, 247);
     cursor: pointer;
     opacity: 70%;
-   
+
 }
 
+/* Ukol 3. */
+
+.board__player--circle {
+    height: 26px;
+    width: 20%;
+    border-radius: 75%;
+    border: 3px solid white;
+    display: inline-block;
+    align-self: center;
+  }
+  
+  .board__player--cross {
+    height: 26px;
+    width: 20%;
+    display: inline-block;
+    align-self: center;
+   
+    background: 
+      linear-gradient(45deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 43%, #fff 45%, #fff 55%, rgba(0, 0, 0, 0) 57%, rgba(0, 0, 0, 0) 100%) ,
+      linear-gradient(135deg, #7e77ab90 40%, #7e77ab90 43%, #fff 45%, #fff 55%, #7e77ab90 50%, #7e77ab90 90%);
+      
+  }
+
+
 .board__field--circle {
-    background-image: url(circle.svg); 
+    background-image: url(circle.svg);
     background-position: 50%;
     background-repeat: no-repeat;
-   
-   
-    
 
-    
-    }
-    .board__field--cross {
+}
+
+.board__field--cross {
     background-image: url(cross.svg);
     background-position: 50%;
     background-repeat: no-repeat;
-    
-    
-    }
+
+
+}
